[gd_scene load_steps=10 format=2]

[ext_resource path="res://OcupiedSpace.tscn" type="PackedScene" id=1]
[ext_resource path="res://EmptySpace.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Digitalt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/BGM.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Fall.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 544.0
color = Color( 0.776471, 0.313726, 0.243137, 1 )

[node name="NameTop" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="LabelName" type="Label" parent="NameTop"]
margin_left = 5.0
margin_top = 440.0
margin_right = 343.0
margin_bottom = 489.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stacker for Vita"
align = 1

[node name="NameBottom" type="ColorRect" parent="."]
margin_left = 900.0
margin_right = 964.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="LabelName" type="Label" parent="NameBottom"]
margin_left = 5.0
margin_top = 440.0
margin_right = 343.0
margin_bottom = 489.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stacker for Vita"
align = 1

[node name="ReplayMenu" type="VBoxContainer" parent="."]
margin_left = 70.0
margin_top = 510.0
margin_right = 193.0
margin_bottom = 586.0
rect_rotation = 270.0

[node name="Score" type="Label" parent="ReplayMenu"]
margin_right = 123.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SCORE:"

[node name="NewGame" type="Button" parent="ReplayMenu"]
margin_top = 53.0
margin_right = 123.0
margin_bottom = 76.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "New game"

[node name="EmptySpace" parent="." instance=ExtResource( 3 )]
visible = false

[node name="OcupiedSpace" parent="." instance=ExtResource( 1 )]
visible = false

[node name="StopButton" type="Button" parent="."]
visible = false
margin_left = 910.0
margin_top = 544.0
margin_right = 1454.0
margin_bottom = 594.0
rect_rotation = 270.0
custom_fonts/font = SubResource( 3 )

[node name="Sounds" type="Node2D" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="BlocksFall" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="pressed" from="ReplayMenu/NewGame" to="." method="_on_NewGame_pressed"]
